--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,7 +1,7 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
 
-Version 1.2.10
+Version 2.0-dev
 
 Version 1.2.09
  - Fixed issue with Repair Mastery (Issue #47)
