--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,7 @@ Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
 
 Version 1.2.12
+ - Added anonymous usage statistics (you can opt out in plugins/PluginMetrics/config.yml)
  - Modified onEntityDamage to have better compatibility with other plugins
  - Fixed /mcgod, & /mmoedit defaulting to true
  - Fixed Fishing not handing out any XP
