--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,9 +4,10 @@ Changelog:
 Version 1.2.12
  - Added anonymous usage statistics (you can opt out in plugins/PluginMetrics/config.yml)
  - Modified onEntityDamage priority to have better compatibility with other plugins (Factions, WorldGuard, etc...)
- - Fixed /mcgod, & /mmoedit defaulting to true
+ - Fixed /mcgod & /mmoedit defaulting to true
  - Fixed Fishing not working or handing out XP
  - Fixed error with Skull Splitter / Serrated Strikes that caused server instability and log spam
+ - Fixed config.yml not having values for End Stone & other new mining blocks
  
 Version 1.2.11
  - Removed legacy Permission & PEX dependency. (PEX still works fine with mcMMO)
