I dun goof'd the changelog, fixing.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,8 @@ Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
 
 Version 1.2.12
+ - Fixed issue that caused terrible MySQL performance and negative XP on levelup (Issue #134)
+ - Fixed addxp command taking xprate and skill modifiers into account
  - Added anonymous usage statistics (you can opt out in plugins/PluginMetrics/config.yml)
  - Modified onEntityDamage priority to have better compatibility with other plugins (Factions, WorldGuard, etc...)
  - Fixed /mcgod & /mmoedit defaulting to true
@@ -22,8 +24,6 @@ Version 1.2.11
  - Added a success message when executing xprate from console
 
 Version 1.2.10
- - Fixed addxp command taking xprate and skill modifiers into account
- - Fixed issue that caused negative XP on levelup (Issue #134)
  - Fixed issue with receiving Woodcutting XP for all blocks broken (Issue #103)
  - Fixed issue with Spout images & sounds not working (Issue #93)
  - Fixed typo with repairing Leather Armor & Bows
