Back to active development

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,8 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
-
+Version 2.0-dev
+ - Fixed /mcability not respecting permissions
+ 
 Version 1.2.12
  - Fixed issue that caused terrible MySQL performance and negative XP on levelup (Issue #134)
  - Fixed addxp command taking xprate and skill modifiers into account
@@ -11,7 +13,7 @@ Version 1.2.12
  - Fixed error with Skull Splitter / Serrated Strikes that caused server instability and log spam
  - Fixed config.yml not having values for End Stone & other new mining blocks
  - Fixed Green Thumb/Green Terra not correctly planting wheat (Issue #133)
- - Fixed /mcability not respecting permissions
+
 
 Version 1.2.11
  - Removed legacy Permission & PEX dependency. (PEX still works fine with mcMMO)
