--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,10 +1,12 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
-Version 2.0-dev
+Version 1.3.00-dev
  - Fixed /mcability not respecting permissions
  - Changed to use Bukkit's built-in ignoreCancelledEvents system
  - Re-added mcMMO reporting damage events
  - Added configuration option to control mcMMO reporting damage events
+ - Added hunger regain bonuses to Herbalism skill
+ - Changed chat logging for /p & /a
  
 Version 1.2.12
  - Fixed issue that caused terrible MySQL performance and negative XP on levelup (Issue #134)
