Added help menu text for Herbalism hunger bonuses (MCCORE-5)

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -182,17 +182,17 @@ m.EffectsHerbalism1_0=Green Terra (ABILITY)
 m.EffectsHerbalism1_1=Spread the Terra, 3x Drops
 m.EffectsHerbalism2_0=Green Thumb (Wheat)
 m.EffectsHerbalism2_1=Auto-Plants wheat when harvesting
-m.EffectsHerbalism3_0=Green Thumb (Cobble)
-m.EffectsHerbalism3_1=Cobblestone -> Mossy w/ Seeds
+m.EffectsHerbalism3_0=Green Thumb (Cobble/Stone Brick)
+m.EffectsHerbalism3_1=Cobblestone/Stone Brick -> Mossy w/ Seeds
 m.EffectsHerbalism4_0=Food+
-m.EffectsHerbalism4_1=Modifies health received from bread/stew
+m.EffectsHerbalism4_1=Modifies hunger received from bread/stew/melon/cookies
 m.EffectsHerbalism5_0=Double Drops (All Herbs)
 m.EffectsHerbalism5_1=Double the normal loot
 m.HerbalismGreenTerraLength=[[RED]]Green Terra Length: [[YELLOW]]{0}s
 m.HerbalismGreenThumbChance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Green Thumb Stage: [[YELLOW]] Wheat grows in stage {0}
 m.HerbalismDoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Food+ (Rank{0}): [[YELLOW]]Bonus {0} healing
+m.HerbalismFoodPlus=[[RED]]Food+ (Rank{0}): [[YELLOW]]Bonus {0} hunger
 m.SkillExcavation=EXCAVATION
 m.XPGainExcavation=Digging and finding treasures
 m.EffectsExcavation1_0=Giga Drill Breaker (ABILITY)
