Changed Tree Feller to not rely on external ArrayList Given Bukkit's behavior of events, it would have never been possible for more than one player's data to occupy the shared arraylist... Still looked ugly, though. Also helps toward concurrent events, should they ever come. Also moved from a static boolean flag to a per-use flag Also removed unused static variable "w"

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,8 +8,9 @@ Version 1.3.00-dev
  - Added configuration option to control mcMMO reporting damage events
  - Added hunger regain bonuses to Herbalism skill
  - Changed chat logging for /p & /a
- - Fixed Tree Feller not playing nice with NoCheat
+ - Fixed Tree Feller not playing nice with NoCheat (?)
  - Added framework for new Blast Mining skill
+ - Changed Tree Feller to use per-use ArrayList
  
 Version 1.2.12
  - Fixed issue that caused terrible MySQL performance and negative XP on levelup (Issue #134)
