Reorganized config.yml and cleaned up Unfortunately, nobody will see our nice super-pretty config.yml copied out properly just yet Fortunately, maven filtering dark magic lets us stick in when it was copied out.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,8 @@ Version 1.3.00-dev
  - Fixed Tree Feller not playing nice with NoCheat (?)
  - Added framework for new Blast Mining skill
  - Changed Tree Feller to use per-use ArrayList
+ - Prettied up new config files
+ - Removed duplicate settings in config.yml
  
 Version 1.2.12
  - Fixed issue that caused terrible MySQL performance and negative XP on levelup (Issue #134)
