--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ Version 1.3.00-dev
  - Changed Tree Feller to use per-use ArrayList
  - Prettied up new config files
  - Removed duplicate settings in config.yml
+ - Removed unused settings from config.yml (HP Regen)
  
 Version 1.2.12
  - Fixed issue that caused terrible MySQL performance and negative XP on levelup (Issue #134)
