--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,12 +8,12 @@ Version 1.3.00-dev
  - Added configuration option to control mcMMO reporting damage events
  - Added hunger regain bonuses to Herbalism skill
  - Changed chat logging for /p & /a
- - Fixed Tree Feller not playing nice with NoCheat (?)
  - Added framework for new Blast Mining skill
  - Changed Tree Feller to use per-use ArrayList
  - Prettied up new config files
  - Removed duplicate settings in config.yml
  - Removed unused settings from config.yml (HP Regen)
+ - Added ability to customize drops for Excavation skill
  
 Version 1.2.12
  - Fixed issue that caused terrible MySQL performance and negative XP on levelup (Issue #134)
