Renamed Food+ to Farmer's Diet

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -184,15 +184,15 @@ m.EffectsHerbalism2_0=[[YELLOW]]Gruener Daumen (Weizen)
 m.EffectsHerbalism2_1=[[AQUA]]automatisches neupflanzen nach ernten
 m.EffectsHerbalism3_0=[[YELLOW]]Gruener Daumen (Cobble)
 m.EffectsHerbalism3_1=[[AQUA]]verwandelt Cobblestone zu Mossy Cobblestone mithilfe von Samen
-m.EffectsHerbalism4_0=[[YELLOW]]Nahrung+
-m.EffectsHerbalism4_1=[[AQUA]]Modifiziert Heilung von Brot/Suppe
+m.EffectsHerbalism4_0=Farmer's Diet
+m.EffectsHerbalism4_1=Improves hunger restored from herbalist foods
 m.EffectsHerbalism5_0=[[YELLOW]]Doppelte Drops (Alle Kraeuter)
 m.EffectsHerbalism5_1=[[AQUA]]doppelte Anzahl Items
 m.HerbalismGreenTerraLength=[[YELLOW]]Gruene Welt Dauer: [[GREEN]]{0}s
 m.HerbalismGreenThumbChance=[[YELLOW]]Gruener Daumen Chance: [[GREEN]]{0}%
 m.HerbalismGreenThumbStage=[[YELLOW]]Gruener Daumen Stufe: [[GREEN]] Getreide waechst auf Stufe {0}
 m.HerbalismDoubleDropChance=[[YELLOW]]Doppelte Drop Chance: [[GREEN]]{0}%
-m.HerbalismFoodPlus=[[YELLOW]]Nahrung+ (Rang{0}): [[GREEN]]Bonus-Heilung {0} 
+m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
 m.SkillExcavation=Graben (Excavation)
 m.XPGainExcavation=[[YELLOW]]Graben und Finden von Schaetzen
 m.EffectsExcavation1_0=[[YELLOW]]Giga Bohrer (Faehigkeit)
