--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -184,15 +184,15 @@ m.EffectsHerbalism2_0=Green Thumb (Wheat)
 m.EffectsHerbalism2_1=Auto-Plants wheat when harvesting
 m.EffectsHerbalism3_0=Green Thumb (Cobble/Stone Brick)
 m.EffectsHerbalism3_1=Cobblestone/Stone Brick -> Mossy w/ Seeds
-m.EffectsHerbalism4_0=Food+
-m.EffectsHerbalism4_1=Modifies hunger received from bread/stew/melon/cookies
+m.EffectsHerbalism4_0=Farmer's Diet
+m.EffectsHerbalism4_1=Improves hunger restored from herbalist foods
 m.EffectsHerbalism5_0=Double Drops (All Herbs)
 m.EffectsHerbalism5_1=Double the normal loot
 m.HerbalismGreenTerraLength=[[RED]]Green Terra Length: [[YELLOW]]{0}s
 m.HerbalismGreenThumbChance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Green Thumb Stage: [[YELLOW]] Wheat grows in stage {0}
 m.HerbalismDoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Food+ (Rank{0}): [[YELLOW]]Bonus {0} hunger
+m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
 m.SkillExcavation=EXCAVATION
 m.XPGainExcavation=Digging and finding treasures
 m.EffectsExcavation1_0=Giga Drill Breaker (ABILITY)
