--- a/src/main/resources/locale/locale_es_es.properties
+++ b/src/main/resources/locale/locale_es_es.properties
@@ -184,15 +184,15 @@ m.EffectsHerbalism2_0=Dedos verdes (Trigo)
 m.EffectsHerbalism2_1=Autoplanta el trigo al recolectarlo
 m.EffectsHerbalism3_0=Dedos verdes (Piedras)
 m.EffectsHerbalism3_1=Transorma Cobblestone en Moss Stone (usa semillas)
-m.EffectsHerbalism4_0=+ Comida
-m.EffectsHerbalism4_1=Modifica la vida recivida por el pan/guiso
+m.EffectsHerbalism4_0=Farmer's Diet
+m.EffectsHerbalism4_1=Improves hunger restored from herbalist foods
 m.EffectsHerbalism5_0=Doble beneficio (Todas las hierbas)
 m.EffectsHerbalism5_1=Dobla el botin normal
 m.HerbalismGreenTerraLength=[[RED]]Duracion de Tierra verde: [[YELLOW]]{0}s
 m.HerbalismGreenThumbChance=[[RED]]Posibilidad de Dedos verdes: [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Etapa de Dedos verdes: [[YELLOW]] El Trigo crece en la etapa {0}
 m.HerbalismDoubleDropChance=[[RED]]Posibilidad de Doble beneficio: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]+ Comida (Rank{0}): [[YELLOW]]{0} de Bonus de Curacion
+m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
 m.SkillExcavation=EXCAVACION
 m.XPGainExcavation=Excavar y encontrar tesoros
 m.EffectsExcavation1_0=Ultra perforador (HABILIDAD)
