--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -184,15 +184,15 @@ m.EffectsHerbalism2_0=Viherpeukalo (Vehnä)
 m.EffectsHerbalism2_1=Istuttaa vehnää automaattisesti kun keräät vehnää
 m.EffectsHerbalism3_0=Viherpeukalo (Mukulakivi)
 m.EffectsHerbalism3_1=Mukulakivi -> Sammaleinen mukulakivi ja siemeniä
-m.EffectsHerbalism4_0=Ruoka+
-m.EffectsHerbalism4_1=Muokkaa terveyttä jota saat leivästä/muhennoksesta
+m.EffectsHerbalism4_0=Farmer's Diet
+m.EffectsHerbalism4_1=Improves hunger restored from herbalist foods
 m.EffectsHerbalism5_0=Tuplasaalis (Kaikki yrtit)
 m.EffectsHerbalism5_1=Tuplaa normaali saaliin määrä
 m.HerbalismGreenTerraLength=[[RED]]Vihermaan kesto: [[YELLOW]]{0}s
 m.HerbalismGreenThumbChance=[[RED]]Viherpeukalon todennäköisyys: [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Viherpeukalon vaihe: [[YELLOW]] Vehnä kasvaa {0}:ssa vaiheessa
 m.HerbalismDoubleDropChance=[[RED]]Tuplasaaliin todennäköisyys: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Ruoka+ (Rank{0}): [[YELLOW]]Bonus {0} terveyden määrä
+m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
 m.SkillExcavation=KAIVANTO
 m.XPGainExcavation=Kaivamalla ja löytämällä aarteita
 m.EffectsExcavation1_0=Giga Drill Breaker (TAITO)
