--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -184,15 +184,15 @@ m.EffectsHerbalism2_0=Main verte (Blé)
 m.EffectsHerbalism2_1=Auto-plantes du blé lors de la récolte
 m.EffectsHerbalism3_0=Main verte (Cobblestone)
 m.EffectsHerbalism3_1=Transforme la Cobble en Mossy avec des graines
-m.EffectsHerbalism4_0=Nouriture+
-m.EffectsHerbalism4_1=Modifie la santé reçue via le pain / ragoût
+m.EffectsHerbalism4_0=Farmer's Diet
+m.EffectsHerbalism4_1=Improves hunger restored from herbalist foods
 m.EffectsHerbalism5_0=Double butin (Toutes cultures)
 m.EffectsHerbalism5_1=Double les récoltes
 m.HerbalismGreenTerraLength=[[RED]]Durée de la capacité spéciale : [[YELLOW]]{0}s
 m.HerbalismGreenThumbChance=[[RED]]Cances d'obtenir la main verte : [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Main verte par niveaux : [[YELLOW]] Wheat grows in stage {0}
 m.HerbalismDoubleDropChance=[[RED]]Chances du Double Butin : [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Nourriture+ (Rang {0}): [[YELLOW]]{0} plus nourissant
+m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
 m.SkillExcavation=EXCAVATION
 m.XPGainExcavation=Creuser et trouver des trésors
 m.EffectsExcavation1_0=Super broyeur (capacité spéciale)
