--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -190,15 +190,15 @@ m.EffectsHerbalism2_0=Groene vingers (Wheat)
 m.EffectsHerbalism2_1=Plant wheat bij het oogsten
 m.EffectsHerbalism3_0=Groene vingers (Cobble)
 m.EffectsHerbalism3_1=Maakt van cobblestone moss-stone met seeds
-m.EffectsHerbalism4_0=Voedsel+
-m.EffectsHerbalism4_1=Verhoogt de heling van brood en stews
+m.EffectsHerbalism4_0=Farmer's Diet
+m.EffectsHerbalism4_1=Improves hunger restored from herbalist foods
 m.EffectsHerbalism5_0=Dubbele Drop (Alle planten)
 m.EffectsHerbalism5_1=Dubbele drop van planten
 m.HerbalismGreenTerraLength=[[RED]]Groene Aarde lengte: [[YELLOW]]{0}s
 m.HerbalismGreenThumbChance=[[RED]]Kans op Groene vingers: [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Groene vingers periode: [[YELLOW]] Wheat groeit in periode {0}
 m.HerbalismDoubleDropChance=[[RED]]Kans op Dubbele Drop: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Voedsel+ (Rank{0}): [[YELLOW]]Bonus {0} heling
+m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
 m.SkillExcavation=UITGRAVING
 m.XPGainExcavation=Graven
 m.EffectsExcavation1_0=Giga Drilboor (ABILITY)
