--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -184,15 +184,15 @@ m.EffectsHerbalism2_0=Wprawne rece (zboze)
 m.EffectsHerbalism2_1=Zbierajac zboze, od razu sadzisz nasiona.
 m.EffectsHerbalism3_0=Wprawne rece (bruk)
 m.EffectsHerbalism3_1=Zamienia bruk w porosniety mchem kamien z nasionami.
-m.EffectsHerbalism4_0=Lepsze jedzenie
-m.EffectsHerbalism4_1=Modyfikowana genetycznie zywnosc jest zdrowsza. Chleb i zupa chlebowa regeneruja wiecej zdrowia.
+m.EffectsHerbalism4_0=Farmer's Diet
+m.EffectsHerbalism4_1=Improves hunger restored from herbalist foods
 m.EffectsHerbalism5_0=Udane zbiory
 m.EffectsHerbalism5_1=Dwa razy wieksze plony wszystkich roslin.
 m.HerbalismGreenTerraLength=[[RED]]Czas trwania zielonej ziemi: [[YELLOW]]{0} sekund
 m.HerbalismGreenThumbChance=[[RED]]Szansa na wprawne rece: [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Poziom wprawnych rak: [[YELLOW]] Zboze rosnie na poziomie {0}
 m.HerbalismDoubleDropChance=[[RED]]Szansa na udane zbiory: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Lepsze jedzenie (Ranga{0}): [[YELLOW]]Dodatkowe {0} zdrowia
+m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
 m.SkillExcavation=WYKOPALISKA
 m.XPGainExcavation=Kopanie i odnajdywanie skarbow.
 m.EffectsExcavation1_0=Super Szybka Saperka (UMIEJETNOSC)
