--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -162,7 +162,6 @@ m.EffectsRepair4_0=Reparaçao de diamantes (Nível {0})
 m.EffectsRepair4_1=Rapara Ferramentas e Armaduras de Diamante
 m.RepairRepairMastery=[[RED]]Mestre em Raparaçao: [[YELLOW]]{0}% extra restaurado
 m.RepairSuperRepairChance=[[RED]]Chance de Super Reparaçao: [[YELLOW]]{0}%
-
 m.SkillUnarmed=DESARMADO
 m.XPGainUnarmed=Atacando monstros
 m.EffectsUnarmed1_0=Fúria (HABILIDADE ESPECIAL)
@@ -184,7 +183,6 @@ m.AbilBonusUnarmed2_1=+4 de Danos
 m.UnarmedArrowDeflectChance=[[RED]]Chance de Desviar Flechas: [[YELLOW]]{0}%
 m.UnarmedDisarmChance=[[RED]]Chance de Desarmar: [[YELLOW]]{0}%
 m.UnarmedBerserkLength=[[RED]]Duraçao da Fúria: [[YELLOW]]{0}s
-
 m.SkillHerbalism=HERBALISMO
 m.XPGainHerbalism=Colhendo Ervas
 m.EffectsHerbalism1_0=Green Terra (HABILIDADE ESPECIAL)
@@ -193,16 +191,15 @@ m.EffectsHerbalism2_0=Dedos Verdes (Trigo)
 m.EffectsHerbalism2_1=Planta automaticamente, ao colher trigo
 m.EffectsHerbalism3_0=Dedos Verdes (Pedras)
 m.EffectsHerbalism3_1=Transforma Cobblestone em Moss Stone (usa sementes)
-m.EffectsHerbalism4_0=Comida+
-m.EffectsHerbalism4_1=Aumenta a vida recebida comendo pao ou sopa
+m.EffectsHerbalism4_0=Farmer's Diet
+m.EffectsHerbalism4_1=Improves hunger restored from herbalist foods
 m.EffectsHerbalism5_0=Drop x2 (Todas Ervas)
 m.EffectsHerbalism5_1=Dobra a quantia de itens obtidos colhendo
 m.HerbalismGreenTerraLength=[[RED]]Duraçao do Green Terra: [[YELLOW]]{0}s
 m.HerbalismGreenThumbChance=[[RED]]Chance do Dedos Verdes: [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Nível do Dedos Verdes: [[YELLOW]] Trigo Cresce no Nível {0}
 m.HerbalismDoubleDropChance=[[RED]]Chance de Drop x2: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Comida+ (Rank{0}): [[YELLOW]]Bônus de {0} de vida
-
+m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
 m.SkillExcavation=ESCAVAÇAO
 m.XPGainExcavation=Cavando e encontrando tesouros
 m.EffectsExcavation1_0=Super Broca (HABILIDADE ESPECIAL)
@@ -210,7 +207,6 @@ m.EffectsExcavation1_1=Drop x3, EXP x3, mais velocidade
 m.EffectsExcavation2_0=Caçad/or de Tesouros
 m.EffectsExcavation2_1=Encontra itens raros enquanto cava
 m.ExcavationGreenTerraLength=[[RED]]Duraçao da Super Broca: [[YELLOW]]{0}s
-
 mcBlockListener.PlacedAnvil=[[DARK_RED]] Você colocou uma bigorna, a bigorna pode reparar ferramentas e armaduras.
 mcEntityListener.WolfComesBack=[[DARK_GRAY]]Seu lobo voltou para você...
 mcPlayerListener.AbilitiesOff=Habilidade especial desabilitada
