--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -185,15 +185,15 @@ m.EffectsHerbalism2_0="Зеленый фермер"(Пщеница)
 m.EffectsHerbalism2_1=Авто выращивание пщеницы после посадки
 m.EffectsHerbalism3_0="Зеленый фермер"(Мох)
 m.EffectsHerbalism3_1=Камень -> Замшелый камень + семена
-m.EffectsHerbalism4_0=Улучшение еды
-m.EffectsHerbalism4_1=Улучшает количество здоровья от хлеба и грибного супа
+m.EffectsHerbalism4_0=Farmer's Diet
+m.EffectsHerbalism4_1=Improves hunger restored from herbalist foods
 m.EffectsHerbalism5_0=Дройной дроп(Все растения)
 m.EffectsHerbalism5_1=Двойной дроп становится нормальным
 m.HerbalismGreenTerraLength=[[RED]]Продолжительность "Озеленителя": [[YELLOW]]{0}s
 m.HerbalismGreenThumbChance=[[RED]]Шанс "Зеленого фермера": [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Уровень "Зеленого фермера": [[YELLOW]] Пщеница растет по-уровнево {0}
 m.HerbalismDoubleDropChance=[[RED]]Шанс двойного дропа: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Еда+ (Rank{0}): [[YELLOW]]Бонус {0} лечения
+m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
 m.SkillExcavation=Раскопка
 m.XPGainExcavation=Раскапывать и искать сокровища
 m.EffectsExcavation1_0=Мега дрель(способность)
