--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,6 +14,8 @@ Version 1.3.00-dev
  - Prettied up new config files
  - Removed duplicate settings in config.yml
  - Removed unused settings from config.yml (HP Regen)
+ - Removed Nether Brick from Mining XP Tables
+ - Removed Stone Brick from Mining XP Tables
  
 Version 1.2.12
  - Fixed issue that caused terrible MySQL performance and negative XP on levelup (Issue #134)
