--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -367,3 +367,8 @@ m.TamingSummonFailed=[[RED]]You have too many wolves nearby to summon any more.
 m.EffectsTaming7_0=Call of the Wild
 m.EffectsTaming7_1=Summon a wolf to your side
 m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones in hand
+m.EffectsTaming8_0=Fast Food Service
+m.EffectsTaming8_1=Chance for wolves to heal when they attack
+m.AbilLockTaming5=LOCKED UNTIL 50+ SKILL (FAST FOOD SERVICE)
+m.AbilBonusTaming5_0=Fast Food Service
+m.AbilBonusTaming5_1=50% Chance to heal equivalent to damage dealt
