Made many changes to Bleeding. Capped max Bleed ticks at 10.

--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -403,3 +403,4 @@ m.EffectsTaming8_1=Chance for wolves to heal when they attack
 m.AbilLockTaming5=LOCKED UNTIL 50+ SKILL (FAST FOOD SERVICE)
 m.AbilBonusTaming5_0=Fast Food Service
 m.AbilBonusTaming5_1=50% Chance to heal equivalent to damage dealt
+Swords.StoppedBleeding=[[GRAY]]The bleeding has [[GREEN]]stopped[[GRAY]]!
