--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,12 +3,14 @@ Changelog:
 
 Version 1.3.00-dev
  - Added ability to customize drops for Excavation skill
+ - Added player notification for when they stop Bleeding
  - Added configuration option to control mcMMO reporting damage events
  - Added hunger regain bonuses to Herbalism skill
  - Added framework for new Blast Mining skill
  - Added Fast Food Service subskill to Taming
  - Re-added mcMMO reporting damage events
  - Fixed /mcability not respecting permissions
+ - Changed Swords Bleeding effect to never kill
  - Changed to use Bukkit's built-in ignoreCancelledEvents system
  - Changed chat logging for /p & /a
  - Changed Tree Feller to use per-use ArrayList
