--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ Version 1.3.00-dev
  - Added Fast Food Service subskill to Taming
  - Re-added mcMMO reporting damage events
  - Fixed /mcability not respecting permissions
+ - Changed Taming to also gain XP from shearing
  - Changed Swords Bleeding effect to never kill
  - Changed Bleeding to never go beyond 10 ticks
  - Changed to use Bukkit's built-in ignoreCancelledEvents system
