Modified locale to reflect Taming XP gain changes

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -40,7 +40,7 @@ m.AbilityBonusTemplate=[[RED]]{0}: [[YELLOW]]{1}
 m.Effects=EFFECTS
 m.YourStats=YOUR STATS
 m.SkillTaming=TAMING
-m.XPGainTaming=Wolves getting harmed
+m.XPGainTaming=Shearing or combat w/ your wolves
 m.EffectsTaming1_0=Beast Lore
 m.EffectsTaming1_1=Bone-whacking inspects wolves
 m.EffectsTaming2_0=Gore
