--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -40,7 +40,7 @@ m.AbilityBonusTemplate=[[RED]]{0}: [[YELLOW]]{1}
 m.Effects=EFEITOS
 m.YourStats=SUAS ESTATISTICAS
 m.SkillTaming=DOMESTICAR
-m.XPGainTaming=Ataque com um lobo
+m.XPGainTaming=Shearing or combat w/ your wolves
 m.EffectsTaming1_0=Conhecimento de Feras
 m.EffectsTaming1_1=Inspeciona um lobo com um osso
 m.EffectsTaming2_0=Mordida
