--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -41,7 +41,7 @@ m.AbilityBonusTemplate=[[RED]]{0}: [[YELLOW]]{1}
 m.Effects=ЭФФЕКТЫ
 m.YourStats=ВАШИ ХАРАКТЕРИСТИКИ
 m.SkillTaming=Приручение
-m.XPGainTaming=Волки причиняют ущерб
+m.XPGainTaming=Shearing or combat w/ your wolves
 m.EffectsTaming1_0=Удар Волка
 m.EffectsTaming1_1=Уменьшение количества костей
 m.EffectsTaming2_0=Окравление
